// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common > <MetaData> Component Snapshot Testing <MetaData> WITH description 1`] = `
<Head>
  <meta
    charSet="utf-8"
  />
  <title>
    App Title
  </title>
  <meta
    content="App description"
    name="description"
  />
  <meta
    content="minimum-scale=1, initial-scale=1, width=device-width"
    name="viewport"
  />
</Head>
`;

exports[`common > <MetaData> Component Snapshot Testing <MetaData> WITHOUT description 1`] = `
<Head>
  <meta
    charSet="utf-8"
  />
  <title>
    App Title
  </title>
  <meta
    content=""
    name="description"
  />
  <meta
    content="minimum-scale=1, initial-scale=1, width=device-width"
    name="viewport"
  />
</Head>
`;
